# ravi-external-libs

./: CMakeLists.txt  README.md  README.rst
include/win64/openssl/: opensslconf.h
lib/win64/: libblas.lib  libcblas.lib  libgslcblas.lib  liblapack.lib  uv.lib
